[package]
name = "shaper_pcb"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.26", features = ["derive"] }
derive_more = { version = "1.0.0", features = ["full"] }
gerber-types = "0.3.0"
gerber_parser = { git = "https://github.com/NemoAndrea/gerber-parser.git" }
i_float = "1.6.0"
i_overlay = "1.9.4"
itertools = "0.14.0"
nalgebra = "0.33.2"
svg = "0.18.0"
